# eb-code

./: .gitignore  LICENSE  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  quasar.config.ts  tsconfig.json  unocss.config.ts
.github/workflows/: tauri-build.yml
nls/: zh-hans.json
patches/: emmet-monaco-es@5.3.2.patch  emmet-monaco-es@5.4.0.patch
plugins/: index.ts
plugins/nls/: index.ts  zh-hans.json
plugins/sortablejs/: index.ts
scripts/: bump.ts  current-key.ts  gen-license.ts  get-themes.ts  github-key.ts  tauri-build.ts
src/: App.vue  auto-imports.d.ts  components.d.ts  env.d.ts  quasar.d.ts  shims-vue.d.ts  svg-component-global.d.ts  svg-component.d.ts
src-tauri/: Cargo.toml  Untitled.epub  tauri.conf.json  test.txt
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: async_proc.rs  clean.rs  command.rs  contents.rs  copy.rs  lib.rs  main.rs  match.rs  open.rs  read.rs  remove.rs  rename.rs  save.rs  search.rs  searcher.rs  send.rs  write.rs
src-tauri/src/open/: directory.rs  epub2_template.rs  epub3_template.rs  template.rs
src/boot/: port.ts  setup.ts
src/components/: CodeEditor.vue  ContentsSet.vue  ContentsTree.vue  CoverSet.vue  EssentialLink.vue  ExampleComponent.vue  FileItem.vue  FileTree.vue  HtmlPreview.vue  ImageViewer.vue  InputSearch.vue  InsertFile.vue  InsertPreview.vue  MenuIcon.vue  MetaItem.vue  MetaSet.vue  MulRemove.vue  MulRename.vue  NaviBar.vue  ReplaceResult.vue  SemanticSet.vue  SetMeta.vue  StatusBar.vue  StyleLink.vue  TitleBanner.vue  (+5 more)
tests/: path.spec.ts
(+54 files in other folders)
