[package]
name = "eb-code"
version = "0.6.2"
description = "Ebook Code is a epub editor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ebcode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-window-state = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.0-beta.7"
epub = "2.1.2"
zip = "0.6.6"
dirs = "5.0"
grep = "0.3.1"
rand = "0.8.5"
walkdir = "2.5.0"
anyhow = "1.0.83"
uuid = "1.8.0"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
lazy_static = "1.4.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta.8"
